--- a/src/public/css/attendance_staff.css
+++ b/src/public/css/attendance_staff.css
@@ -1,26 +1,22 @@
-/* 全体背景 */
 body {
     background-color: #F0EFF2;
     font-family: "Inter", sans-serif;
 }
 
-/* ページの余白 */
 .container {
     max-width: 900px;
     margin: 40px auto;
     padding: 20px;
 }
 
-/* タイトル */
 .page-title {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 30px;
-    border-left: 4px solid black;
+    border-left: 8px solid black;
     padding-left: 10px;
 }
 
-/* 月ナビ */
 .month-nav {
     display: flex;
     justify-content: space-between;
@@ -33,36 +29,43 @@ body {
     font-weight: bold;
 }
 
+.month-nav__change {
+    text-decoration: none;
+    font-weight: bold;
+    color: #737373;
+    font-size: 16px;
+    letter-spacing: 0.15em;
+}
+
+.arrow_left__img {
+    width: 20px;
+    height: auto;
+    opacity: 0.3;
+    margin-right: 10px;
+    margin-bottom: 3px;
+}
+
+.arrow_right__img {
+    width: 20px;
+    height: auto;
+    opacity: 0.3;
+    margin-left: 10px;
+    margin-bottom: 3px;
+    transform: rotate(180deg);
+}
+
 .calendar__img {
     width: 22px;
     height: auto;
     margin-right: 10px;
 }
 
-.month-nav__btn {
-    color: #737373;
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: bold;
-    letter-spacing: 0.15em;
-}
-
-.month-nav__btn:hover {
-    text-decoration: underline;
-}
-
-.month-nav__current {
-    font-weight: bold;
-}
-
-/* カード */
 .attendance-card {
     background: white;
     border-radius: 10px;
     padding: 10px 0;
 }
 
-/* テーブル */
 .attendance-table {
     width: 100%;
     border-collapse: collapse;
@@ -90,7 +93,6 @@ body {
     border-bottom: 1px solid #E1E1E1;
 }
 
-/* 詳細リンク */
 .detail-link {
     color: black;
     text-decoration: none;
@@ -99,4 +101,28 @@ body {
 
 .detail-link:hover {
     text-decoration: underline;
+}
+
+.csv-button-area {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    padding-top: 50px;
+}
+
+.csv-button {
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: 22px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    letter-spacing: 0.15em;
+    width: 184px;
+    height: 50px;
+}
+
+.csv-button:hover {
+    opacity: 0.85;
 }
